[update] 完善10/10笔记

--- a/docs/1-1010.md
+++ b/docs/1-1010.md
@@ -1,14 +1,338 @@
 ## 闭包
 
+闭包是一种匿名函数，即可以不指定函数名，在函数体内临时定义的函数，可以绑定给变量，也可以作为函数参数或返回值进行传递。不同于普通函数，闭包支持捕获当前上下文中的变量，跟其他语言中 `lambda` 类似。闭包语法很简洁，语法如下：
+
+```rust
+|参数1,参数2| { 函数体 }
+
+// 如果函数体只包含一个返回表达式的话可以省略 {}
+|参数| 表达式
+```
+
+闭包参数支持自动推导，但是也可以显式的进行指定。闭包也可以作为一种类型，但是由于每个闭包形式都不同，用一种统一类型无法进行描述，所以用特征+特征约束来进行表示，比如结构体成员是一个闭包类型：
+
+```rust
+struct Cache<T>
+	where T: Fn(u32) -> u32,
+{
+	query: T,
+	value: Option<u32>,
+}
+```
+
+其中`Fn`是标准库提供的一种特征，上面代码中的表示 接受 u32 参数，返回 u32 值的一类函数，你可以使用闭包或者常规函数对其赋值。
+
+闭包还支持捕获当前上下文中变量，默认情况下，Rust闭包对于捕获的变量，会优先采用**不可变引用(&T) -> 可变引用(&mut T) -> 值(T)** 顺序形式进行捕获， 闭包捕获变量不需要在参数或者其他地方进行说明，Rust会自动检测闭包函数体，如果使用了外部同名变量，会自动进行捕获。另外需要注意，如果闭包需要捕获 `mutable` 变量并对其进行修改，则需要声明为 mut ，如果捕获的变量在闭包中转移了所有权，闭包外不能再对其使用。
+
+```rust
+let str = "hello".to_string();  
+  
+let f = ||{  
+    let mut s = str;// 此处转移了所有权  
+    s.push_str(" World!");  
+    println!("str = {}", s);  
+};  
+f();  
+// 错误，String 没有实现Copy，在前面闭包中转移了所有权。
+println!("str = {}", str);
+
+```
+
+如果我们需要在闭包中捕获的变量转移所有权，则可以在闭包 `||` 前面加上 `move` ，比如：`let f = move || {...};` 。
+
+Rust为我们提供了几种不同的 `Fn` 特征，分别为 **`FnOnce`** 、**`Fn`** 和 **`FnMut`** ，看名称应该就能猜出大致作用了。
+
+- **Fn  **
+
+如果闭包对变量进行了不可变引用的捕获（指使用了外部变量，但是没有进行任何修改），则表示这个闭包实现了 `Fn` 特征，我们可以在变量有效作用域内调用函数，仍然遵循所有权以及借用规则。如果在闭包函数体内没有进行所有权的转移，则可以在允许条件下多次调用。
+
+- **FnMut** 
+
+跟 `Fn` 类似，如果闭包对变量进行了可变引用的捕获（指使用了外部变量并对其进行了修改），则表示这个闭包实现了 `Fn` 特征，我们可以在变量有效作用域内调用函数。如果在闭包函数体内没有进行所有权的转移，则可以在允许条件下多次调用。
+
+- **FnOnce**
+
+表示闭包或者函数只能调用一次，对于我们写的闭包，如果在函数体内出现了捕获变量的所有权转移，则Rust不允许这个闭包多次调用，即代表这个闭包实现了 `FnOnce` 特征，比如：
+
+```rust
+let mut str = "hello".to_string();  
+  
+let mut f =  move || {  
+    str.push_str(" World!");  
+    println!("str = {}", str);  
+};  
+f();
+f();
+```
+
+上面闭包 `f` 可以多次调用，是因为Rust闭包捕获变量相当于把这个变量作为了匿名函数类的一个成员，捕获发生在构造阶段，只要闭包函数体内没有对捕获的变量进行所有权转移，并且 `f` 对象没有离开作用域，就可以多次调用，也就是上面的 `f` 只实现了 `FnMut` 特征，没有 `FnOnce` ！相反的，下面的 `f` 就不能多次调用：
+
+```rust
+let mut str = "hello".to_string();  
+  
+let mut f =  move || {  
+	let mut str = str; // 转移了所有权
+    str.push_str(" World!");  
+    println!("str = {}", str);  
+};  
+f();
+```
 
 ## 迭代器操作
 
+迭代器是Rust中非常常用也很重要的东西，主要用在对集合的操作上。使用常规的 `for` 循环或者 `while` 循环对集合进行操作时，需要写很多循环嵌套代码，特别是在需要多次循环处理时。但是使用Rust迭代器进行操作可能就是几行代码的事，不仅使代码更加简洁，还使代码可读性提高很多。
+
+Rust迭代器是实现了 `Iterator` 特征的类型，并且至少实现了 `next` 函数：
+
+```rust
+pub trait Iterator {
+    type Item; // 被迭代的元素的类型。
+
+    // Required method
+    // 推进迭代器并返回下一个值。迭代完成后返回 [None]
+    // 各个迭代器的实现可能选择恢复迭代，
+    // 因此再次调用next()可能会或可能不会最终在某个时候开始再次返回 [Some(Item)] 。
+    fn next(&mut self) -> Option<Self::Item>;
+}
+```
+
+迭代器就像一个流，获取最初迭代器指向集合开始位置，使用 `next` 使流向后推进，直到返回 `None` 抵达流末端。
+
+Rust标准库中集合数据基本都实现了迭代器，迭代器很多都是使用闭包作为函数参数，这些闭包在迭代器遍历中就会运行发挥作用，使用过C++就不会对其感到陌生，常用的迭代器操作如下：
+
+- **next操作**
+
+next作为最直接的迭代器操作，用于返回迭代器值并将迭代器移动到下一位，如果到位部，则返回 `None` ，可以使用  `match` 模式匹配配合循环完成遍历。需要注意 `next` 方法参数是 `&mut self` ，所以调用需要保证迭代器是 `mutable` 的。
+
+- **遍历**
+
+这大概是用得最多的操作了，遍历一个集合可以使用迭代器的 `for_each` 方法，也可以使用 `for` 循环语法糖：
+
+```rust
+let ary: Vec<i32> = vec![1, 2, 3, 4, 5];  
+  
+ary.iter().for_each(|v: &i32| {  
+    println!("value by iter: {}", v);  
+});  
+// 或者 for v in ary.iter() {}
+for v in &ary {  
+    println!("value by for: {}", v);  
+}
+```
+
+for 循环虽然能做到遍历集合，但是对于需要同时获取下标是，迭代器就显得更加方便：
+
+```rust
+let ary: Vec<i32> = vec![1, 2, 3, 4, 5];  
+  
+ary.iter().enumerate().for_each(|(i, v)| {  
+    println!("value by iter[{}]: {}", i, v);  
+});
+```
+
+遍历只是迭代器基本功能，更强大的还是下面这些功能以及迭代器的“组合技”。
+
+- **filter和filter_map** 
+
+`filter` 作用是过滤掉迭代器中用户不关注的元素，参数是一个返回值是 `bool` 类型的闭包，返回的迭代器中只包含这个闭包返回 `true` 的元素，比如我们希望得到集合中的偶数：
+
+```rust
+let ary: Vec<i32> = vec![1, 2, 3, 4, 5];  
+  
+ary.iter()  
+    .filter(|v| *v % 2 == 0)  
+    .for_each(|v| println!("{}", v));
+// 只输出 2 4
+```
+
+`filter_map` 作用跟 filter 类似，但是提供了同时 过滤和映射的功能，所谓映射就是将迭代器中元素转换为另外一种类型并返回，参数是一个返回 `Option<B>` 的闭包，其中 `B` 是映射后的类型。
+
+`filter_map` 返回的迭代器中只包含闭包中返回 `Some(T)` 的元素，比如上面例子中过滤偶数的同时将其转换为字符串：
+
+```rust
+ary.iter()  
+    .filter_map(|v| {  
+        if *v % 2 == 0 {  
+	        // format!() 返回 String类型
+            Some(format!("Hello World - {}", *v))  
+        }else {  
+            None  
+        }  
+    })    .for_each(|v| println!("{}", v));
+```
+
+- **map与map_while**
+
+`map` 操作将迭代器中元素转换为另外一种类型，参数是返回 `B(新类型)` 的闭包，具体操作跟上一个例子差不多。
+
+`map_while` 闭包返回值为 `Option<B>` ：
+
+```rust
+ary.iter()  
+    .map_while(|v| {  
+        if *v % 2 != 0 {  
+            Some(format!("Hello World - {}", *v))  
+        }else {  
+            None  
+        }  
+    })    .for_each(|v| println!("{}", v));
+// 只会输出 Hello World - 1
+```
+
+- **collect和collect_into** 
+
+`collect` 收集迭代器元素，将其转换为集合，可以将任何可迭代的东西变为相关的集合，因此通常在使用迭代器对集合进行了一系列操作后存入新的集合中。迭代器转换集合由于是通用形式，需要我们手动指定转换类型，比如 `collect::<xxx>` 或者 `let x: XXX = xxx.collect();`。
+
+`collect_into` 参数指定一个已有集合，将收集到的值添加到这个已有集合中。
+
+- **rev**
+
+通常迭代器都是正向进行遍历，使用 `rev` 可以让迭代器逆向进行，但是要求迭代器实现 **[`DoubleEndedIterator`](https://rustwiki.org/zh-CN/std/iter/trait.DoubleEndedIterator.html "trait std::iter::DoubleEndedIterator")** 。
+
+- **min max**
+
+`min` 返回迭代器中最小元素，存在则返回 `Some(v)` ，没有则返回 `None` ，`max` 则返回最大元素。
+
+- **skip**
+
+创建一个跳过前 `n` 个元素的迭代器，输出之后的元素，如果迭代器太短，则返回空迭代器，跳过元素数量有参数指出。
+
+```rust
+let a = [1, 2, 3];
+
+let mut iter = a.iter().skip(2);
+
+assert_eq!(iter.next(), Some(&3));
+assert_eq!(iter.next(), None);
+```
+
+- **step_by**
+
+创建一个从同一点开始的迭代器，但在每次迭代时以给定的数量逐步执行，相当于隔 几个元素收集元素。
+
+```rust
+let a = [0, 1, 2, 3, 4, 5];
+let mut iter = a.iter().step_by(2);
+
+assert_eq!(iter.next(), Some(&0));
+assert_eq!(iter.next(), Some(&2));
+assert_eq!(iter.next(), Some(&4));
+assert_eq!(iter.next(), None);
+```
+
+**zip与unzip**
+
+`zip` 参数为另一个迭代器，返回包含两个迭代器中元素元组的新迭代器，`unzip` 跟 `zip` 相反，将元组元素迭代后变为一个元组，第一个为左元素集合，第二个为右边元素集合。
+
+```rust
+let a = [(1, 2), (3, 4), (5, 6)];
+
+let (left, right): (Vec<_>, Vec<_>) = a.iter().cloned().unzip();
+
+assert_eq!(left, [1, 3, 5]);
+assert_eq!(right, [2, 4, 6]);
+```
+
+```rust
+let a1 = [1, 2, 3];
+let a2 = [4, 5, 6];
+
+let mut iter = a1.iter().zip(a2.iter());
+
+assert_eq!(iter.next(), Some((&1, &4)));
+assert_eq!(iter.next(), Some((&2, &5)));
+assert_eq!(iter.next(), Some((&3, &6)));
+```
+
+更详细的操作，可以参考 [Rust标准库文档](https://rustwiki.org/zh-CN/std/iter/trait.Iterator.html) 。
 
 ## 智能指针
 
+Rust中智能指针用于将值分配到 **堆** 中，包含一个指向该内存的指针。
 
-## 线程并发
+Rust中最简单的指针指针便是 **`Box<T>`** 了，除了一些简单的封装外没有任何性能损失，相对应的就是功能比较单一了，适用场景：
 
+- 1. 特意的将数据分配在堆上
+- 2. 数据较大时，又不想在转移所有权时进行数据拷贝
+- 3. 类型的大小在编译期无法确定，但是我们又需要固定大小的类型时
+- 4. 特征对象，用于说明对象实现了一个特征，而不是某个特定的类型
+
+第3点主要用在自指变量如链表时，比如：
+
+```rust
+enum List
+{
+	// next(List) 错误，使用List无限递归，无法计算实际内存大小
+	next(Box<List>), // 这样即可解决，Box<T> 大小固定的
+	Nil,
+}
+```
+
+第4点用在数组中存放实现了某种特征的不同类型对象：
+
+```rust
+trait XXX{...}
+let ary: Vec<Box<dyn XXX>> = vec![...];
+```
+
+Box 实现了静态函数 `pub fn leak<'a>(b: Box<T, A>) -> &'a mut T` ，可以消耗并泄漏 `Box`，返回一个可变引用，`&'a mut T`。 类型 `T` 必须超过所选的生命周期 `'a`，如果类型仅具有静态引用，或者根本没有静态引用，则可以将其选择为 `'static`，即可以将Box中对象生命周期变为 `static` 。
+
+智能指针进行了一些封装，但是我们可以很方便的进行操作，得益于Rust为其实现了 **`Deref`和 `Drop`** 特征
+
+- `Deref` 可以让智能指针像引用那样工作，这样你就可以写出同时支持智能指针和引用的代码，例如 `*T` 。
+- `Drop` 允许你指定智能指针超出作用域后自动执行的代码，例如做一些数据清除等收尾工作。
+
+实现了 `Deref` 特征的类型可以对引用执行解引用操作，同时Rust在很多地方都会隐式的调用 `Deref` 特征中方法，将类型转换为合适的引用类型，这个机制在Rust中被称为：[Deref强制多态](https://rustwiki.org/zh-CN/std/ops/trait.Deref.html#more-on-deref-coercion) 。
+
+实现了 `Drop` 特征的对象则会在生命周期结束后调用对应的函数，可以完成一些收尾工作。
+
+Box智能指针默认只能一个对象拥有一个所有权，`Rc` 跟 `Arc` 则是引用计数智能指针，跟C++中`shared_ptr` 类似，其中 `Arc` 则是多线程安全版本，`Rc` 不能在跨越线程使用。其内部会维护一个引用计数，只有当引用计数为零时才会回收释放内存。使用 `Arc::clone()` 和 `Rc::clone()` 可以实现数据共享，直接使用 `=` 赋值方法无用！
+
+`Rc` 和 `Arc` 是不可变的引用，无法修改他们指向的值，因为智能指针也得遵循Rust引用和借用规则，不能同时享有多个可变引用。多线程下需要修改数据则可以配合 `Mutex` 等完成，常规情况则可以使用 `RefCell` 的内部可变性完成修改。
+
+## 多线程
+
+Rust使用 `thread::spawn` 创建一个新线程并返回一个 `JoinHandle` 线程句柄，参数为一个闭包，作为新线程中执行的函数。如果不将返回值绑定到变量，则无法在之后了解这个线程的状态，比如等待线程结束或者获取返回值。
+
+`JoinHandle` 可以使用 `join` 方法等待线程执行完成，并返回 `Result<T, E>` ，线程发生 panic 则为 Err，正常返回则为 Ok(v) ，v为线程函数返回值。
+
+可以使用线程工厂 `thread::Builder` 构造特定名称，栈大小的线程：
+
+```rust
+let builder = std::thread::Builder::new();  
+let th = builder.name("thread1".into()).spawn(||{  
+	// ...
+}).unwrap();  
+th.join();
+```
 
 ## 多线程同步
 
+多线程数据访问，Mutex互斥锁自然排在首位，`Mutex`让多个线程并发的访问同一个值变成了排队访问，同一时间，只允许一个线程`A`访问该值，其它线程需要等待`A`访问完成后才能继续。
+
+不过多线程下仍然需要使用Arc保证引用计数安全，Mutex具有内部可变性，所有可以进行数据修改，但是需要保证使用数据前进行加锁，完成修改后及时解锁，不过由于`Drop`，Mutex可以在结束作用域后自动解锁，但要时刻注意**死锁**，比如单个线程内连续使用 `lock` 。
+
+```rust
+let mux: Arc<Mutex<Vec<i32>>> = Arc::new(Mutex::new(vec![1, 2, 3, 4, 5]));  
+  
+let builder = std::thread::Builder::new();  
+{  
+    let mux = mux.clone();  
+    let th = builder.name("thread1".into()).spawn(move || {  
+        let mut vec = mux.lock().unwrap();  
+        (*vec).push(6);  
+        vec.iter().enumerate()  
+            .for_each(|(i, v)|println!("vec[{}] = {}", i, *v));  
+    }).unwrap();  
+    let _ = th.join();  
+}  
+mux.lock().unwrap().iter().enumerate().for_each(|(i, v)|{  
+    println!("vec1[{}] = {}", i, *v);  
+});
+```
+
+Rust还支持 `Condvar` 条件变量，条件变量用于在多线程中等待某个条件的满足，通常在获取锁`L` 后判断某个条件是否满足，如果不满足则使用 `wait` 方法休眠当前线程，同时将 `L` 解锁，直到其他线程中使用这个条件变量进行了 `notify` 唤醒当前线程，才继续执行，相比自选锁的无限循环，这种睡眠机制更加节约CPU。
+
+多线程中另外一个重要概念是信号量，信号量可以控制同时并发的数量，信号量指定某个数值后，在线程中使用信号量，只有当信号量满足一定数值规则后线程才能获得锁并执行任务。
+
+更多信息可以参考：[Rust同步](https://rustwiki.org/zh-CN/std/sync/index.html) 。
